samples/_failures_safe/1761658128_87f747_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6db025d.c: In function ‘main’:
./samples/SAFE/__tmp_c6db025d.c:153:16: error: missing terminating " character
  153 |         printf("Error: No log entries found or file cannot be
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c6db025d.c:153:9: error: expected expression at end of input
  153 |         printf("Error: No log entries found or file cannot be
      |         ^~~~~~
./samples/SAFE/__tmp_c6db025d.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6db025d.c:153:9: error: expected declaration or statement at end of input
